	   - Fixed content negotiation issues with methods accepting 
         Representation parameters or returning Representation 
         instances. Reported by Dustin Jenkins.
       - Fixed potential thread blocks due to CountDownLatch.await()
         calls. They now properly time out. Suggested by Tim Peierls.
	   - Fixed initialisation of the ClientInfo#userAgentTemplates 
             static variable. Reported by Michael Terrington.
       - Fix bug with automatic redirects by Directory when the URI
         contains query parameters. Reported by William Pietri.
    - Misc
       - Additional errors are now caught and logged in the HTTP 
         servers. Contributed by Marc Portier.
	   - Updated Jetty to version 7.1.6. Suggested by Marc Portier.
	   - Updated Netty to version 3.2.2.
	   - Optimized writing from NIO channels to BIO output streams.
	   - Updated Simple to version 4.1.20.
	   
- 2.0.1 (2010-09-08)
    - Bugs fixed
       - When cloning the prototype request, the ClientResource wasn't
         copying the ClientInfo#user property.
       - Fixed the setting of the Request's rootRef attribute when 
         using the RIAP protocol.
         Reported by Tal Liron and Tim Peierls. 
       - Fixed content negotiation issue in the Servlet extension and
         all HTTP connectors except the internal one.  
       - Fixed the deserialization of unavailable entities in the GWT 
         edition.
       - Fixed serialization of String objects in the GWT extension.
       - Allowed to filter serialized types in the GWT client proxies
         generated.
       - Fixed potential entity reading issue with Grizzly HTTP server.
       - Fixed the internal client connector when a connection cannot 
         be found to send a request.
       - Added missing createRequest(Request), createResponse(Request) 
         methods in the ClientResource class.
       - Optional authentication keep request in neutral state: neither